fix: show scrollbar on grid row form only if needed

--- a/frappe/public/scss/common/grid.scss
+++ b/frappe/public/scss/common/grid.scss
@@ -521,7 +521,7 @@
 
 	.grid-form-body {
 		max-height: 80vh;
-		overflow: scroll;
+		overflow: auto;
 	}
 }
 
